we reset the html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>The New Web Clone Page</title>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
-    <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
     <nav class="navbar">
