modified style.css and index.html files

--- a/index.html
+++ b/index.html
@@ -102,8 +102,12 @@
             <section class='bio-tnw'>
                 <div class="bio-tnw-cont">
                     <article class="left-art">
-                        <a href="#"><img src="./assets/font/img/left-art-img.png" alt="biometric-authentication img"
-                                class="left-img"></a>
+                      
+                        <div class="left-art-top">Tuesday — June 9, 2020</div>
+
+                        <div class="left-art-down"><p>IBM won’t develop facial recognition tech for mass 
+                        surveillance anymore</p></div>
+                        
                     </article>
 
                     <article class=" right-art">
