We styled and put images on html file

--- a/index.html
+++ b/index.html
@@ -129,11 +129,13 @@
             </section>
 
         </header>
+    <div class="info"><a href="">Latest news></a></div>
+        
+    <article class="eight-grids">
 
-        <article class="eight-grids">
             <div class="div-4-eight">
 
-                <div class="info"><a href="">Latest news></a></div>
+                <div class="upper-grid">
 
                 <div class="top-img-div">
 
@@ -193,10 +195,11 @@
 
                 </div>
 
+            </div>
 
 
-
-                <div class="next-img-div">
+               <div class="lower-grid">
+            <div class="next-img-div">
 
                     <div>
                         <a href="#"><img src="./assets/font/img/Bill-gate-5.jpeg" alt="Bill picture"></a>
@@ -258,6 +261,8 @@
 
                 </div>
             </div>
+        </div> 
+        
         </article>
 
 
