--- a/index.html
+++ b/index.html
@@ -106,18 +106,6 @@
                 <div class="right-art-top">
                     <a href="#">Shopify, Basecamp & more share what's next for digital products on June 11</a>
                 </div>
-
-            </section>
-
-        </header>
-    <div class="info"><a href="">Latest news></a></div>
-        
-    <article class="eight-grids">
-
-            <div class="div-4-eight">
-
-                <div class="upper-grid">
-
                 <div class="right-art-bottom">
                     <a href="#">The upcoming all-electric BMW iX3 is a sign the industry is truly changing</a>
                 </div>
@@ -134,7 +122,7 @@
                             <h4>How 'microgravity' changes the bodies of astronauts</h4>
                         </a>
                         <br>
-                        <a href="#"> The Cosmic Companion</a><span> · 3 hours ago</span>
+                        <a href="#"> The Cosmic Companion</a><span> • 3 hours ago</span>
                     </div>
 
                     <div>
@@ -144,7 +132,7 @@
                                 Here’s what it takes to succeed</h4>
                         </a>
                         <br>
-                       <a href="#">TNW Deals</a> <span> · 22 hours ago</span>
+                       <a href="#">TNW Deals</a> <span> • 22 hours ago</span>
                     </div>
 
 
@@ -155,7 +143,7 @@
                                 cinema in support of Black Lives Matter</h4>
                         </a>
                         <br>
-                        <a href="#">Rachel Kaser</a><span> · 1 day ago</span>
+                        <a href="#">Rachel Kaser</a><span> • 1 day ago</span>
                     </div>
 
                     <div class="red">
@@ -164,7 +152,7 @@
                             <h4>Reddit's co-founder resigns, asks to be replaced by black candidate</h4>
                         </a>
                         <br>
-                        <a href="#">Rachel Kaser</a> <span> · 1 day ago</span>
+                        <a href="#">Rachel Kaser</a> <span> • 1 day ago</span>
                     </div>
 
 
@@ -175,7 +163,7 @@
                             <h4>Bill Gates commits $750M to help Oxford vaccinate the world against COVID-19</h4>
                         </a>
                         <br>
-                        <a href="#">David Canellis</a><span> · 1 day ago</span>
+                        <a href="#">David Canellis</a><span> • 1 day ago</span>
                     </div>
 
                     <div>
@@ -184,7 +172,7 @@
                             <h4>Call of Duty: Warzone now shows message of support for Black Lives Matter</h4>
                         </a>
                         <br>
-                        <a href="#">Mix1</a> <span> · day ago</span>
+                        <a href="#">Mix1</a> <span> • day ago</span>
                     </div>
 
                     <div>
@@ -193,7 +181,7 @@
                             <h4>Who’s allowed to track my kids online?</h4>
                         </a>
                         <br>
-                        <a href="#">The Markup</a><span> · 1 day ago</span>
+                        <a href="#">The Markup</a><span> • 1 day ago</span>
                     </div>
 
                     <div>
@@ -203,7 +191,7 @@
                         <h4>Watch: Unboxing a $1,000 mail order electric car from China</h4>
                         </a>
                         <br>
-                        <a href="#">Matthew Beedham</a><span> · 1 day ago</span>
+                        <a href="#">Matthew Beedham</a><span> • 1 day ago</span>
                     </div>
                 </div>
         </article>
