we fixed issues in the style

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 </div>
 
                 <div class="latest-div6">
-                    <p><h4>LATEST</h4><a href="#">Facebook-backed Reliance Jio pilots basic <br> grocery ordering service on WhatsApp in <br> India</a>
+                    <p><h4>LATEST</h4><a href="#">Facebook-backed Reliance Jio pilots <br> basic  grocery ordering service on <br> WhatsApp in  India</a>
                     </p>
                     <img src="./assets/font/img/JioMart-WhatsApp.jpg" alt="JioMart-WhatsApp" class="latest-img">
                 </div>
@@ -456,7 +456,7 @@
                 <div class="latest-div7">
 
                         <h4>LATEST</h4>
-                        <a href="#">The Criterion Channel removes paywall on classic black cinema in support of Black
+                        <a href="#">The Criterion Channel removes <br> paywall on classic black cinema in <br> support of Black
                             Lives Matter</a>
 
                     <img src="./assets/font/img/Criterion-Channel-3.jpg" alt="Criterion-Channel" class="latest-img">
