fixed the footer part

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
             
                 <div class="top-img-div">
-                    <div>
+                    <div class="micro-grav">
                         <a href="#"> <img src="./assets/font/img/microgravity_header-1.png" alt="Microgravit img"></a>
                         <a href="#">
                             <h4>How 'microgravity' changes the bodies of astronauts</h4>
@@ -129,7 +129,7 @@
                         <a href="#"> The Cosmic Companion</a><span> • 3 hours ago</span>
                     </div>
 
-                    <div>
+                    <div class="micro-grav">
                         <a href="#"><img src="./assets/font/img/fortune-grows-2.jpg" alt="fortune grows img"></a>
                         <a href="#">
                             <h4>Fortunes are growing for Instagram’s best and brightest.
@@ -140,7 +140,7 @@
                     </div>
 
 
-                    <div>
+                    <div class="micro-grav">
                         <a href="#"> <img src="./assets/font/img/Criterion-Channel-3.jpg" alt="Criterion cahnnel"></a>
                         <a href="#">
                             <h4>The Criterion Channel removes paywall on classic black
@@ -161,7 +161,7 @@
 
 
 
-                    <div>
+                    <div class="micro-grav">
                         <a href="#"><img src="./assets/font/img/Bill-gate-5.jpeg" alt="Bill picture"></a>
                         <a href="#">
                             <h4>Bill Gates commits $750M to help Oxford vaccinate the world against COVID-19</h4>
@@ -170,7 +170,7 @@
                         <a href="#">David Canellis</a><span> • 1 day ago</span>
                     </div>
 
-                    <div>
+                    <div class="micro-grav">
                         <a href="#"><img src="./assets/font/img/call-of duty-6.jpg" alt="call of duty "></a>
                         <a href="#">
                             <h4>Call of Duty: Warzone now shows message of support for Black Lives Matter</h4>
@@ -179,7 +179,7 @@
                         <a href="#">Mix1</a> <span> • day ago</span>
                     </div>
 
-                    <div>
+                    <div class="micro-grav">
                         <a href="#"><img src="./assets/font/img/tnw-online-7.png" alt="tnw online img"></a>
                         <a href="#">
                             <h4>Who’s allowed to track my kids online?</h4>
@@ -188,7 +188,7 @@
                         <a href="#">The Markup</a><span> • 1 day ago</span>
                     </div>
 
-                    <div>
+                    <div class="micro-grav">
                         <a href="#"><img src="./assets/font/img/changli-car-electric-china-8.png"
                                 alt="Changli-car-electric"> </a>
                         <a href="#">
