Aligned items on the page for responsiveness.

--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
             
             <div class="right-art">
                 <div class="right-art-top">
-                    <a href="#">Shopify, Basecamp & more share what's next for digital products on June 11</a>
+                    <p id="stub-para"> <a href="#">Shopify, Basecamp & more share what's next for digital products on June 11</a></p>
                 </div>
                 <div class="right-art-bottom">
-                    <a href="#">The upcoming all-electric BMW iX3 is a sign the industry is truly changing</a>
+                    <a href="#">The upcoming all-electric BMW iX3 is a sign the industry is truly changing</a> 
                 </div>
             </div>
         </div>
