--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 Here’s what it takes to succeed</h4>
                         </a>
                         <br>
-                       <a href="#" class="cosmic-op">TNW Deals</a> <span id="hours-22"> • 22 hours ago</span>
+                       <a href="#" class="cosmic-op">TNW Deals</a> <span id="hours-3"> • 22 hours ago</span>
                     </div>
                     </div>
 
@@ -173,7 +173,7 @@
                                 cinema in support of Black Lives Matter</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">Rachel Kaser</a><span id="rachael-1"> • 1 day ago</span>
+                        <a href="#" class="cosmic-op">Rachel Kaser</a><span id="hours-3"> • 1 day ago</span>
                     </div>
                     </div>
 
@@ -185,7 +185,7 @@
                             <h4 class="reddit-tag">Reddit's co-founder resigns, asks to be replaced by black candidate</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">Rachel Kaser</a> <span id="rachael-2"> • 1 day ago</span>
+                        <a href="#" class="cosmic-op">Rachel Kaser</a> <span id="hours-3"> • 1 day ago</span>
                     </div>
                     </div>
 
@@ -198,7 +198,7 @@
                             <h4>Bill Gates commits $750M to help Oxford vaccinate the world against COVID-19</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">David Canellis</a><span id="rachael-3"> • 1 day ago</span>
+                        <a href="#" class="cosmic-op">David Canellis</a><span id="hours-3"> • 1 day ago</span>
                     </div>
                     </div>
 
@@ -210,7 +210,7 @@
                             <h4>Call of Duty: Warzone now shows message of support for Black Lives Matter</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">Mix1</a> <span id="mix1"> • day ago</span>
+                        <a href="#" class="cosmic-op">Mix1</a> <span id="hours-3"> • day ago</span>
                     </div>
                     </div>
 
@@ -221,7 +221,7 @@
                             <h4>Who’s allowed to track my kids online?</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">The Markup</a><span id="mark-up"> • 1 day ago</span>
+                        <a href="#" class="cosmic-op">The Markup</a><span id="hours-3"> • 1 day ago</span>
                     </div>
                     </div>
 
@@ -233,7 +233,7 @@
                         <h4>Watch: Unboxing a $1,000 mail order electric car from China</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">Matthew Beedham</a><span id="matthew"> • 1 day ago</span>
+                        <a href="#" class="cosmic-op">Matthew Beedham</a><span id="hours-3"> • 1 day ago</span>
                     </div>
                     </div>
                
@@ -536,8 +536,7 @@
                 <div class="fb-class">
                         <h2> MOST POPULAR </h2>
                         <a href="#">
-                            <h4> Facebook takes another stab at enabling 'free' mobile web access <br> with its new Discover
-                                app</h4>
+                            <h4> Facebook takes another stab at enabling 'free' mobile web access with its new Discover app</h4>
                         </a>
                         <small>Ivan Mehta. 4weeks ago</small>
                 </div>
