we fixed issues in big screen

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="eight-grids">
         <article>
                 <div class="info">
-                        <a href="#" class="news-latest">Latest news ></a>
+                        <a href="#">Latest news ></a>
                 </div>
             
                 <div class="top-img-div">
