fixed some issues in and id duplicated we changed to class

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <h4>How 'microgravity' changes the bodies of astronauts</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op"> The Cosmic Companion</a><span id="hours-3"> • 3hours ago</span>
+                        <a href="#" class="cosmic-op"> The Cosmic Companion</a><span class="hours-3"> • 3hours ago</span>
                     </div>
                     
                 </div>
@@ -160,7 +160,7 @@
                                 Here’s what it takes to succeed</h4>
                         </a>
                         <br>
-                       <a href="#" class="cosmic-op">TNW Deals</a> <span id="hours-3"> • 22 hours ago</span>
+                       <a href="#" class="cosmic-op">TNW Deals</a> <span class="hours-3"> • 22 hours ago</span>
                     </div>
                     </div>
 
@@ -173,7 +173,7 @@
                                 cinema in support of Black Lives Matter</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">Rachel Kaser</a><span id="hours-3"> • 1 day ago</span>
+                        <a href="#" class="cosmic-op">Rachel Kaser</a><span class="hours-3"> • 1 day ago</span>
                     </div>
                     </div>
 
@@ -185,7 +185,7 @@
                             <h4 class="reddit-tag">Reddit's co-founder resigns, asks to be replaced by black candidate</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">Rachel Kaser</a> <span id="hours-3"> • 1 day ago</span>
+                        <a href="#" class="cosmic-op">Rachel Kaser</a> <span class="hours-3"> • 1 day ago</span>
                     </div>
                     </div>
 
@@ -198,7 +198,7 @@
                             <h4>Bill Gates commits $750M to help Oxford vaccinate the world against COVID-19</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">David Canellis</a><span id="hours-3"> • 1 day ago</span>
+                        <a href="#" class="cosmic-op">David Canellis</a><span class="hours-3"> • 1 day ago</span>
                     </div>
                     </div>
 
@@ -210,7 +210,7 @@
                             <h4>Call of Duty: Warzone now shows message of support for Black Lives Matter</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">Mix1</a> <span id="hours-3"> • day ago</span>
+                        <a href="#" class="cosmic-op">Mix1</a> <span class="hours-3"> • day ago</span>
                     </div>
                     </div>
 
@@ -221,7 +221,7 @@
                             <h4>Who’s allowed to track my kids online?</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">The Markup</a><span id="hours-3"> • 1 day ago</span>
+                        <a href="#" class="cosmic-op">The Markup</a><span class="hours-3"> • 1 day ago</span>
                     </div>
                     </div>
 
@@ -233,7 +233,7 @@
                         <h4>Watch: Unboxing a $1,000 mail order electric car from China</h4>
                         </a>
                         <br>
-                        <a href="#" class="cosmic-op">Matthew Beedham</a><span id="hours-3"> • 1 day ago</span>
+                        <a href="#" class="cosmic-op">Matthew Beedham</a><span class="hours-3"> • 1 day ago</span>
                     </div>
                     </div>
                
@@ -250,7 +250,7 @@
                 <div class="funding-nav">
                     <ul class="funding-list">
                         <li><a href="#">Add info</a></li>
-                        <li><a href="#"> Get updates by email </a></li>
+                        <li><a href="#" class="borda"> Get updates by email </a></li>
                         <li><a href="#">See more</a></li>
                     </ul>
                 </div>
