upgraded parameters in different files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="icon" href="./assets/font/img/tnw-img-icon.jpeg">
     <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="stylesheet" href="./assets/style/reset.css">
     <script src="https://kit.fontawesome.com/afeefd2482.js" crossorigin="anonymous"></script>
 </head>
 
