--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="yellow-bar">
-            <h4><span><a href="#"></a>Don't fall behind our tech future -Join TNW Couch Conferences ➔</span></a></h4>
+            <h4><span><a href="#">Don't fall behind our tech future -Join TNW Couch Conferences ➔</a> </span></h4>
         </div>
     </header>
 
@@ -119,7 +119,7 @@
                 <nav class="top-nav">
     
                         <ul class="left-list">
-                            <li><a href="#" id="news">News</a></li>
+                            <li><a href="#" class="news">News</a></li>
                             <li class="event-drop">
                                 <a href="#" class="anch-event">Events▾</a>
                                 <ul class="event-list">
@@ -161,12 +161,12 @@
                     <nav class="white-nav">
     
                         <ul class="left-white-list">
-                            <li><a href="#" id="latest">LATEST</a></li>
+                            <li><a href="#" class="latest">LATEST</a></li>
                             <li><a href="#">HARD FORK</a></li>
                             <li><a href="#">PLUGGED</a></li>
                             <li><a href="#">README</a></li>
                             <li><a href="#">GROWTH QUARTERS</a></li>
-                            <li><a href="#" id="neural">NEURAL</a></li>
+                            <li><a href="#" class="neural">NEURAL</a></li>
                         </ul>
                       </nav>    
                       <span class="span-search"><i class="fas fa-search"></i></span>
