--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
     </header> 
     <header class="small-header">
-
+      <div  >
         <div class="small-top-bar">
             <div class="tnw-annex-img">
                 <a href="#"><img src="./assets/font/img/tnw-img-icon.jpeg" alt="tnw-img-icon"></a>
@@ -104,6 +104,7 @@
         <div class="yellow-bar">
             <h4><span><a href="#">Don't fall behind our tech future -Join TNW Couch Conferences ➔</a> </span></h4>
         </div>
+    </div>
     </header>
 
     <header class="medium-header">
