--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 
                 <div class="latest-div6">
                     <div class="div-extra">
-                        <h4>LATEST</h4><a href="#">Facebook-backed Reliance Jio pilots <br> basic  grocery ordering service on <br> WhatsApp in  India</a>
+                        <h4>LATEST</h4><a href="#">Facebook-backed Reliance Jio pilots <br> basic  grocery ordering service.</a>
                     </div>
                     <img src="./assets/font/img/JioMart-WhatsApp.jpg" alt="JioMart-WhatsApp" class="latest-img">
                 </div>
