--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div  >
         <div class="small-top-bar">
             <div class="tnw-annex-img">
-                <a href="#"><img src="./assets/font/img/tnw-img-icon.jpeg" alt="tnw-img-icon"></a>
+                <a href="#"><img src="./assets/font/img/tnw.svg" alt="tnw-img-icon"></a>
               <a href="#" class="x-t"><b>TNW X</b></a>
             </div>
             <div class="harmbug-menu">
@@ -635,7 +635,7 @@
             </div>
 
             <div class="launch-div">
-                <div class="info1"><a href="#" id="apps-h5"><h2>Distract > </h2></a></div>
+                <div class="info1"><a href="#" class="apps-h5"><h2>Distract > </h2></a></div>
 
                 <div class="iwatch">
                     <h2> MOST POPULAR </h2><a href="#"><h4>Some artiste made a gorgeous chart <br> of every official Apple Watch band</h4></a>
