--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div  >
         <div class="small-top-bar">
             <div class="tnw-annex-img">
-                <a href="#"><img src="./assets/font/img/tnw.svg" alt="tnw-img-icon"></a>
+                <a href="#"><img src="assets/font/img/tnw-img-icon.jpeg" alt="tnw-img-icon"></a>
               <a href="#" class="x-t"><b>TNW X</b></a>
             </div>
             <div class="harmbug-menu">
