--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
                     </div>
                 </div>
                 <div class="footer-down-div" >
-                    <span><a href="#"><img src="./assets/font/img/tnw.svg" alt="tnw-img" class="tnw-small"></a>© 2006–2020 The Next Web B.V.</span>
+                    <span><a href="#"><img src="./assets/font/img/tnw-bott.png" alt="tnw-img" class="tnw-small"></a>© 2006–2020 The Next Web B.V.</span>
                     <span>Made with <b> ♥ </b>in Amsterdam.</span> <span> Powered by <a href="#"> StackPath</a></span>
                 </div>
             </footer>
