fixed issues in responsive screens

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <div class="small-top-bar">
             <div class="tnw-annex-img">
                 <a href="#"><img src="assets/font/img/tnw-img-icon.jpeg" alt="tnw-img-icon"></a>
+
             </div>
             <div class="harmbug-menu">
                 <span class="span-search"><i class="fas fa-search"></i></span>
@@ -200,10 +201,10 @@
             
             <div class="right-art">
                 <div class="right-art-top">
-                    <p id="stub-para"> <a href="#">Shopify, Basecamp & more share what's next for digital products on June 11</a></p>
+                    <p class="stub-para"> <a href="#">Shopify, Basecamp & more share what's next for digital products on June 11</a></p>
                 </div>
                 <div class="right-art-bottom">
-                    <a href="#">The upcoming all-electric BMW iX3 is a sign the industry is truly changing</a> 
+                   <h4> <a href="#">The upcoming all-electric BMW iX3 is a sign the industry is truly changing</a> </h4>
                 </div>
             </div>
         </div>
