--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                         <a href="#">
                             <h4>A brief history of bad logo redesigns <br> — and what designers can learn from them</h4>
                         </a>
-                        <small>Micah Bowers.1day ago </small>
+                        <small id="mica-bow">Micah Bowers.1day ago </small>
                     </div>
 
                 </div>
@@ -548,7 +548,7 @@
                 </div>
 
                 <div class="latest-div4">
-                    <div class="div-extra">
+                    <div class="div-extra" id="sub-covid-19">
                         <h4>LATEST</h4>
                         <a href="#"> An entrepreneur’s guide to COVID-19 <br> tech news in May </a>
                     </div>
@@ -582,7 +582,7 @@
                 </div>
 
                 <div class="latest-div5">
-                    <div class="div-extra">
+                    <div class="div-extra" id="stub-tweaks">
                         <h4>LATEST</h4>
                         <a href="#">3 simple website tweaks to impress your <br> customers </a>
                     </div>
@@ -617,7 +617,7 @@
                 </div>
 
                 <div class="latest-div6">
-                    <div class="div-extra">
+                    <div class="div-extra" id="stub-pilots">
                         <h4>LATEST</h4><a href="#">Facebook-backed Reliance Jio pilots <br> basic  grocery ordering service.</a>
                     </div>
                     <img src="./assets/font/img/JioMart-WhatsApp.jpg" alt="JioMart-WhatsApp" class="latest-img">
@@ -644,8 +644,8 @@
 
                 <div class="latest-div7">
                    <div class="div-extra">
-                        <h4>LATEST</h4>
-                        <a href="#">The Criterion Channel removes <br> paywall on classic black cinema in <br> support of Black
+                        <h4 id="black-cinema">LATEST</h4>
+                        <a href="#" id="paywell-chan">The Criterion Channel removes <br> paywall on classic black cinema in <br> support of Black
                             Lives Matter</a>
                         </div>
 
