Fixed the issues pointed out

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                   </div>
 
             </div>
-        <article class="apps">
+        <article class="apps" id="my-gam">
 
             <div class="info-txt-div">
                 
