--- a/index.html
+++ b/index.html
@@ -757,6 +757,7 @@
         </div>
     </main>
             <footer class="footer-cont">
+                <div class="footer-wrapp"> 
                 <div class="footer-up-div">
                     <div class="icon-div">
                         <ul class="icon-cont">
@@ -784,6 +785,7 @@
                     <span><a href="#"><img src="./assets/font/img/tnw-bott.png" alt="tnw-img" class="tnw-small"></a>© 2006–2020 The Next Web B.V.</span>
                     <span>Made with <b> ♥ </b>in Amsterdam.</span> <span> Powered by <a href="#"> StackPath</a></span>
                 </div>
+            </div>
             </footer>
         </body>
 </html>
