--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </header>
 
  
-      <main class="cont-main">
+  
       <div class="bio-tnw">
             <article class="left-art">
                 <h2 class="left-art-top">Tuesday — June 9, 2020</h2>
@@ -433,11 +433,13 @@
 
                 <div class="simpson ">
 
-                    <h2> MOST POPULAR </h2><a href="#">
+                    <h2> MOST POPULAR </h2>
+                    <a href="#">
                         <h4>Look, I don’t care if ‘The Outer Worlds’ Switch port is bad — pump it in my veins</h4>
                         </a>
                     <small>Callum Booth2 .days ago</small>              
                 </div>
+                
                 <div class="latest-div1" >
                 <div class="div-extra" >
                     <h4>LATEST</h4>
@@ -755,7 +757,7 @@
                 </div>
              </article>
         </div>
-    </main>
+    
             <footer class="footer-cont">
                 <div class="footer-wrapp"> 
                 <div class="footer-up-div">
