--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>The TNW</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <!--FONTS-->
+    <link href="//db.onlinewebfonts.com/c/846bf30549b6d556a988ea1599fa5bf8?family=Avalon" rel="stylesheet" type="text/css"/>
+    <link href="//db.onlinewebfonts.com/c/466deba3855c345af3e1371e28d783ae?family=ARS+Maquette+Web+One" rel="stylesheet" type="text/css"/>
     <link rel="icon" href="./assets/font/img/tnw-img-icon.jpeg">
     <link rel="stylesheet" href="./assets/style/style.css"> 
     <script src="https://kit.fontawesome.com/afeefd2482.js" crossorigin="anonymous"></script>
