fixed issues in main grid and added font style to all elements

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ GrubTech raises $2 million seed
                 <div class="first-grid">
                     <article>
                     <div class="title-first">
-                        <a href="#"><h2>Latest News</h2></a>
+                        <a href="#"><h2>Latest News ></h2></a>
                     </div>
                     <div class="news-container">
                         <div class="news-items news-item1">
@@ -786,7 +786,7 @@ GrubTech raises $2 million seed
         <article class="latest-container">
             <div class="deals-title">
               <h2>Latest deals ></h2>
-              <p>See all Deals</p>
+              <p class="the-p">See all Deals</p>
             </div>
             <div class="deals-grid">
               <div class="deals-grid-items deals-grid-item1">
@@ -796,17 +796,17 @@ GrubTech raises $2 million seed
               </div>
               <div class="deals-grid-items deals-grid-item2">
                 <a href="#"><img src="./assets/font/img/limited-edition.png" alt="news"/></a>
-                <a href="#"><h3>Instagram Marketing 2020: Step-by-Step to 10,000+ Followers</h3></a>
+                <a href="#"><h3>Instagram Marketing 2020: Step-by-Step </h3></a>
                 <p><span>$199</span> $13.99</p>
               </div>
               <div class="deals-grid-items deals-grid-item3">
                 <a href="#"><img src="./assets/font/img/prof-plan-img.png" alt="news"/></a>
-                <a href="#"><h3>FREE: Leadership & Management Diploma 4-Week Course</h3></a>
+                <a href="#"><h3> Diploma 4-Week Course</h3></a>
                 <p><span>$49.99</span> $0</p>
               </div>
               <div class="deals-grid-items deals-grid-item4">
                 <a href="#"><img src="./assets/font/img/epic-python-img.png" alt="news"/></a>
-                <a href="#"><h3>Instagram Marketing 2020: Step-by-Step to 10,000+ Followers</h3></a>
+                <a href="#"><h3>Step-by-Step to 10,000+ Followers Instagram Marketing 2020 </h3></a>
                 <p><span>$199</span> $13.99</p>
               </div>
               <div class="deals-grid-items deals-grid-item5">
@@ -816,7 +816,7 @@ GrubTech raises $2 million seed
               </div>
               <div class="deals-grid-items deals-grid-item6">
                 <a href="#"><img src="./assets/font/img/itg-digital-img.png" alt="news"/></a>
-                <a href="#"><h3>Instagram Marketing 2020: Step-by-Step to 10,000+ Followers</h3></a>
+                <a href="#"><h3>10,000+ Instagram Marketing 2020: Step-by-Step to  Followers</h3></a>
                 <p><span>$199</span> $13.99</p>
               </div>
               <div class="deals-grid-items deals-grid-item7">
