Fixing issues requested in some items

--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                                 <h2 class="funding-header">Latest funding rounds on Index.co ></h2>
                             </a>
                             <ul class="funding-anchors">
-                                <li> <a href="#"> See more</a></li>
-                                <li> <a href="#"> Get updates by email </a></li>
-                                <li> <a href="#"> Add info</a></li>
+                                <li> <a href="#" style="color: #f42;"> See more</a></li>
+                                <li> <a href="#" style="color: #f42;"> Get updates by email </a></li>
+                                <li> <a href="#" style="color: #f42;"> Add info</a></li>
                             </ul>
                             
                         </div>
