fixed issues in grids text

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <a href="#">
                             <img src="./assets/font/img/microgravity_header-1.png" alt="Microgravit img">
                             <h2>
-                            The Cosmic Companion, How 'microgravity' changes the bodies of astronauts
+                            The Cosmic Companion, changes the bodies of astronauts
                             </h2>
                             <p>The Cosmic Companion 3 Hours ago</p>
                         </a>
@@ -130,7 +130,7 @@
                         <a href="#">
                             <img src="./assets/font/img/fortune-grows-2.jpg" alt="fortune grows img">
                             <h2>
-                            Fortunes are growing for Instagram’s best and brightest. Here’s what it takes to succeed
+                            Fortunes are growing for Instagram’s best and brightest. 
                             </h2>
                             <p>TNW Deals 22 Hours ago</p>
                         </a>
@@ -139,7 +139,7 @@
                         <a href="#">
                             <img src="./assets/font/img/Criterion-Channel-3.jpg" alt="Criterion cahnnel">
                             <h2>
-                            The Criterion Channel removes paywall on classic black cinema in support of Black Lives Matter
+                            The Criterion Channel removes paywall on Black Lives Matter
                             </h2>
                             <p>Rachel Kaser 1 Day ago</p>
                         </a>
@@ -165,8 +165,7 @@
                         <div class="news-items news-item6">
                         <a href="#">
                             <img src="./assets/font/img/call-of-duty-6.jpg" alt="call of duty ">
-                            <h2>
-                            Call of Duty: Warzone now shows message of support for Black Lives Matter
+                            <h2>Call of Duty: message of support for Black Lives Matter
                             </h2>
                             <p>Rachel Kaser 1 Day ago</p>
                         </a>
@@ -184,7 +183,7 @@
                         <a href="#">
                             <img src="./assets/font/img/changli-car-electric-china-8.png" alt="Changli-car-electric">
                             <h2>
-                            Watch: Unboxing a $1,000 mail order electric car from Chinahe Markup Matthew Beedham
+                            Watch: Unboxing a $1,000 mail order electric car from Chinahe
                             </h2>
                             <p>Mathew Speldmann 41 minutes ago</p>
                         </a>
@@ -274,8 +273,7 @@
                         <div class="secondary-container">
                           <img src="./assets/font/img/css-library.png" alt="Hello stalker" />
                           <h3>LATEST</h3>
-                          <h2>
-                            New app makes it easy to turn your camera into a webcam
+                          <h2>New app makes it easy to turn your camera into a webcam
                           </h2>
                         </div>
                         <div class="tertiary-container">
@@ -336,7 +334,7 @@
                             <img src="./assets/font/img/trump-tweets.png" alt="trump-tweets" />
                           <h3>LATEST</h3>
                           <h2>
-                            The case for biometric authentication — <br> and why we should ditch passwords
+                            The case for biometric authentication and why we should ditch passwords.
                           </h2>
                         </div>
                         <div class="tertiary-container">
@@ -365,7 +363,7 @@
                             <img src="./assets/font/img/css-library.png" alt="css library" class="latest-img"/>
                           <h3>LATEST</h3>
                           <h2>
-                            This CSS library makes it easy to design <br> Windows XP-inspired UIs 
+                            This CSS library makes it easy to design Windows XP-inspired UIs 
                           </h2>
                         </div>
                         <div class="tertiary-container">
@@ -394,8 +392,7 @@
                         <div class="secondary-container">
                           <img src="./assets/font/img/entreprenure-2-img.png" alt="Entreprenure" />
                           <h3>LATEST</h3>
-                          <h2>
-                            An entrepreneur’s guide to COVID-19 tech news in May. 
+                          <h2>An entrepreneur’s guide to COVID-19 tech news in May. 
                           </h2>
                         </div>
                         <div class="tertiary-container">
@@ -422,8 +419,7 @@
                         <div class="secondary-container">
                           <img src="./assets/font/img/insight-img-2.png" alt="Insight Img" />
                           <h3>LATEST</h3>
-                          <h2>
-                            3 simple website tweaks to impress your customers 
+                          <h2> 3 simple website tweaks to impress your customers 
                           </h2>
                         </div>
                         <div class="tertiary-container">
@@ -452,8 +448,7 @@
                         <div class="secondary-container">
                           <img src="./assets/font/img/JioMart-WhatsApp.jpg" alt="JioMart-WhatsApp" />
                           <h3>LATEST</h3>
-                          <h2>
-                            Facebook-backed Reliance Jio pilots basic  grocery ordering service.
+                          <h2>Facebook-backed Reliance Jio pilots basic  grocery ordering service.
                           </h2>
                         </div>
                         <div class="tertiary-container">
@@ -480,21 +475,16 @@
                         <div class="secondary-container">
                           <img src="./assets/font/img/Criterion-Channel-3.jpg" alt="Criterion-Channel-3" />
                           <h3>LATEST</h3>
-                          <h2>
-                            The Criterion Channel removes <br> paywall on classic black cinema in support of Black Lives Matter
+                          <h2>The Channel removes paywall on black cinema in Black Lives Matter.
                           </h2>
                         </div>
                         <div class="tertiary-container">
                             <ul class="apps-anch">
-                                <li><a href="#">This tiny game runs directly in your browser's title bar — and it's kinda
-                                        fun</a></li>
+                                <li><a href="#">This tiny game runs directly in your browser's title bar — and it's kinda fun</a></li>
                                 <li><a href="#">Apple ‘begs’ Escobar for extension on $2.6B lawsuit — Escobar DENIES</a></li>
-                                <li><a href="#">Google searches for ‘insomnia’ and ‘can’t sleep’ hit all-time high during
-                                        lockdown</a></li>
-                                <li><a href="#">It's time for a sequel to The Social Network and Quentin Tarantino should direct
-                                        it</a></li>
-                                <li><a href="#">Devious Call of Duty pranksters are building shitty guns to fool players in
-                                        Warzone</a></li>
+                                <li><a href="#">Google searches for ‘insomnia’ and ‘can’t sleep’ hit all-time high during lockdown</a></li>
+                                <li><a href="#">It's time for a sequel to The Social Network and Quentin Tarantino should direct it</a></li>
+                                <li><a href="#">Devious Call of Duty pranksters are building shitty guns to fool players in Warzone</a></li>
                             </ul>
                         </div>
                       </div>
